# play-soduko

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  authority.py  config.py  connections.py  db.py  main.py  matchmaking.py  models.py  rating.py  rest.py  runtime.py  schemas.py  store.py  sudoku.py  worker.py  ws.py
apps/api/tests/: conftest.py  test_rest.py  test_sudoku.py  test_ws.py
apps/web/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  config.ts  icons.tsx  main.tsx  styles.css
apps/web/src/arena/: ArenaGame.tsx  ArenaResults.tsx  ShadowBoard.tsx  arenaMachine.ts  identity.ts  useArena.ts  wsClient.ts
apps/web/src/solo/: SoloGame.tsx  Solved.tsx  generator.test.ts  generator.ts  useSoloGame.ts
apps/web/src/ui/: Board.tsx  Cell.tsx  Controls.tsx  Home.tsx  NumberPad.tsx
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROTOCOL.md
